<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="PRG_LVCP1_Colors" Id="{300e3ac5-d05b-4873-aad5-996df34f5e49}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_LVCP1_Colors
VAR
	arrLine : ARRAY[1..4] OF E_LineColors;
	arrCapacitorSchemaColor : ARRAY[1..10] OF ST_CapacitorSchemaColorWithContactor;

	i : INT;
	bInitDone : BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT bInitDone THEN
	ACT_ContactorConfigurations();
	bInitDone := TRUE;
END_IF

//line1
arrLine[1] := E_LineColors.Energised_Red;

//line2
arrLine[2] := arrLine[1];

//line3
arrLine[3] := arrLine[2];

//line4
arrLine[4] := arrLine[3];

//şemaları kendi içerisinde kontrol edicez
FOR i:=1 TO 10 DO
	arrCapacitorSchemaColor[i].GroundColor := E_LineColors.Grounded_Green;
	arrCapacitorSchemaColor[i].BottomLineColor2 := E_LineColors.Grounded_Green;

	//topline
	arrCapacitorSchemaColor[i].TopLineColor := arrLine[4];
	
	//bottomLine - şema üzerinde ayırıcının altındaki her iki line birbiri ile bağlantılı olduğu için tek yerden yönetiliyor
	IF arrCapacitorSchemaColor[i].ContactorPosition = E_ContactorPosition.ON THEN
		arrCapacitorSchemaColor[i].BottomLineColor := arrCapacitorSchemaColor[i].TopLineColor;
	ELSE
		arrCapacitorSchemaColor[i].BottomLineColor := E_LineColors.Default;
	END_IF
	
	//capacitor
	arrCapacitorSchemaColor[i].CapacitorColor := arrCapacitorSchemaColor[i].BottomLineColor;
	
END_FOR
]]></ST>
    </Implementation>
    <Action Name="ACT_ContactorConfigurations" Id="{2a37403b-2f7d-4a72-b61e-243bad327620}">
      <Implementation>
        <ST><![CDATA[arrCapacitorSchemaColor[1].ContactorPosition := GVL_LVCP1.stGroup1_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[2].ContactorPosition := GVL_LVCP1.stGroup2_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[3].ContactorPosition := GVL_LVCP1.stGroup3_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[4].ContactorPosition := GVL_LVCP1.stGroup4_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[5].ContactorPosition := GVL_LVCP1.stGroup5_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[6].ContactorPosition := GVL_LVCP1.stGroup6_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[7].ContactorPosition := GVL_LVCP1.stGroup7_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[8].ContactorPosition := GVL_LVCP1.stGroup8_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[9].ContactorPosition := GVL_LVCP1.stGroup9_ContactorHMI.stStatus.ePosition;
arrCapacitorSchemaColor[10].ContactorPosition := GVL_LVCP1.stGroup10_ContactorHMI.stStatus.ePosition;
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="PRG_LVCP1_Colors">
      <LineId Id="429" Count="2" />
      <LineId Id="426" Count="1" />
      <LineId Id="362" Count="1" />
      <LineId Id="421" Count="0" />
      <LineId Id="365" Count="27" />
      <LineId Id="137" Count="0" />
    </LineIds>
    <LineIds Name="PRG_LVCP1_Colors.ACT_ContactorConfigurations">
      <LineId Id="3" Count="9" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>